lib/native/generated/engine_bindings.dart

// Generated by `make ffi-generate`. Do not edit manually.

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Generated bindings for the versioned Asterix engine C ABI.
class AsterixEngineBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AsterixEngineBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AsterixEngineBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int asterix_engine_abi_version() {
    return _asterix_engine_abi_version();
  }

  late final _asterix_engine_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'asterix_engine_abi_version',
      );
  late final _asterix_engine_abi_version = _asterix_engine_abi_versionPtr
      .asFunction<int Function()>();

  int asterix_engine_create(
    ffi.Pointer<AsterixEngineConfig> config,
    ffi.Pointer<ffi.Pointer<AsterixEngineHandle>> out_handle,
  ) {
    return _asterix_engine_create(config, out_handle);
  }

  late final _asterix_engine_createPtr =
      _lookup<
        ffi.NativeFunction<
          AsterixStatus Function(
            ffi.Pointer<AsterixEngineConfig>,
            ffi.Pointer<ffi.Pointer<AsterixEngineHandle>>,
          )
        >
      >('asterix_engine_create');
  late final _asterix_engine_create = _asterix_engine_createPtr
      .asFunction<
        int Function(
          ffi.Pointer<AsterixEngineConfig>,
          ffi.Pointer<ffi.Pointer<AsterixEngineHandle>>,
        )
      >();

  void asterix_engine_destroy(ffi.Pointer<AsterixEngineHandle> handle) {
    return _asterix_engine_destroy(handle);
  }

  late final _asterix_engine_destroyPtr =
      _lookup<
        ffi.NativeFunction<ffi.Void Function(ffi.Pointer<AsterixEngineHandle>)>
      >('asterix_engine_destroy');
  late final _asterix_engine_destroy = _asterix_engine_destroyPtr
      .asFunction<void Function(ffi.Pointer<AsterixEngineHandle>)>();

  int asterix_engine_enqueue(
    ffi.Pointer<AsterixEngineHandle> handle,
    ffi.Pointer<AsterixCommandBatch> batch,
  ) {
    return _asterix_engine_enqueue(handle, batch);
  }

  late final _asterix_engine_enqueuePtr =
      _lookup<
        ffi.NativeFunction<
          AsterixStatus Function(
            ffi.Pointer<AsterixEngineHandle>,
            ffi.Pointer<AsterixCommandBatch>,
          )
        >
      >('asterix_engine_enqueue');
  late final _asterix_engine_enqueue = _asterix_engine_enqueuePtr
      .asFunction<
        int Function(
          ffi.Pointer<AsterixEngineHandle>,
          ffi.Pointer<AsterixCommandBatch>,
        )
      >();

  int asterix_engine_copy_ui_snapshot(
    ffi.Pointer<AsterixEngineHandle> handle,
    ffi.Pointer<AsterixUiSnapshot> out_snapshot,
  ) {
    return _asterix_engine_copy_ui_snapshot(handle, out_snapshot);
  }

  late final _asterix_engine_copy_ui_snapshotPtr =
      _lookup<
        ffi.NativeFunction<
          AsterixStatus Function(
            ffi.Pointer<AsterixEngineHandle>,
            ffi.Pointer<AsterixUiSnapshot>,
          )
        >
      >('asterix_engine_copy_ui_snapshot');
  late final _asterix_engine_copy_ui_snapshot =
      _asterix_engine_copy_ui_snapshotPtr
          .asFunction<
            int Function(
              ffi.Pointer<AsterixEngineHandle>,
              ffi.Pointer<AsterixUiSnapshot>,
            )
          >();

  int asterix_engine_drain_events(
    ffi.Pointer<AsterixEngineHandle> handle,
    ffi.Pointer<AsterixEvent> events,
    ffi.Pointer<ffi.Size> in_out_event_count,
  ) {
    return _asterix_engine_drain_events(handle, events, in_out_event_count);
  }

  late final _asterix_engine_drain_eventsPtr =
      _lookup<
        ffi.NativeFunction<
          AsterixStatus Function(
            ffi.Pointer<AsterixEngineHandle>,
            ffi.Pointer<AsterixEvent>,
            ffi.Pointer<ffi.Size>,
          )
        >
      >('asterix_engine_drain_events');
  late final _asterix_engine_drain_events = _asterix_engine_drain_eventsPtr
      .asFunction<
        int Function(
          ffi.Pointer<AsterixEngineHandle>,
          ffi.Pointer<AsterixEvent>,
          ffi.Pointer<ffi.Size>,
        )
      >();
}

final class AsterixEngineHandle extends ffi.Opaque {}

typedef AsterixStatus = ffi.Uint32;
typedef DartAsterixStatus = int;
typedef AsterixCommandType = ffi.Uint32;
typedef DartAsterixCommandType = int;
typedef AsterixEventType = ffi.Uint32;
typedef DartAsterixEventType = int;

final class AsterixEngineConfig extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint32()
  external int command_capacity;

  @ffi.Uint32()
  external int event_capacity;
}

final class AsterixCommand extends ffi.Struct {
  @ffi.Uint32()
  external int type;

  @ffi.Uint32()
  external int reserved;

  @ffi.Int64()
  external int value;
}

final class AsterixCommandBatch extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  external ffi.Pointer<AsterixCommand> commands;

  @ffi.Size()
  external int command_count;
}

final class AsterixUiSnapshot extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint64()
  external int generation;

  @ffi.Int64()
  external int score;

  @ffi.Uint32()
  external int paused;

  @ffi.Uint32()
  external int pending_commands;

  @ffi.Uint32()
  external int dropped_event_count;

  @ffi.Uint32()
  external int reserved;
}

final class AsterixEvent extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Uint32()
  external int type;

  @ffi.Uint32()
  external int command_type;

  @ffi.Int64()
  external int value;

  @ffi.Uint64()
  external int generation;
}

const int ASTERIX_ENGINE_ABI_VERSION = 1;

const int ASTERIX_ENGINE_MAX_COMMANDS = 256;

const int ASTERIX_ENGINE_MAX_EVENTS = 256;

const int ASTERIX_STATUS_OK = 0;

const int ASTERIX_STATUS_INVALID_ARGUMENT = 1;

const int ASTERIX_STATUS_INCOMPATIBLE_ABI = 2;

const int ASTERIX_STATUS_QUEUE_FULL = 3;

const int ASTERIX_STATUS_STOPPED = 4;

const int ASTERIX_STATUS_INTERNAL_ERROR = 5;

const int ASTERIX_COMMAND_SET_PAUSED = 1;

const int ASTERIX_COMMAND_ADD_SCORE = 2;

const int ASTERIX_EVENT_COMMAND_APPLIED = 1;

const int ASTERIX_ENGINE_CONFIG_V1_SIZE = 16;

const int ASTERIX_COMMAND_BATCH_V1_SIZE = 24;

const int ASTERIX_UI_SNAPSHOT_V1_SIZE = 40;
